<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculadora"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_um_numero"
        android:inputType="number"/>

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_um_segundo_numero"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnSomar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/somar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/lblResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado_resp"
        android:textSize="18sp" />


</LinearLayout>